# zdppy_modbus

./: .gitignore  README.md  pyproject.toml
examples/demo01/: slave.py
examples/demo01_sync/: master.py
examples/demo02/: master.py  slave.py
examples/demo03/: master.py  slave.py
examples/demo03_redis_async/: README.md  bredis.bat  master.py  redis.py  redis_acquisition.py  redis_socketio.py
examples/demo04/: master.py  slave.py
examples/demo04_scada/: README.md  config.py  docker.sh  main.py
examples/demo04_scada/whls/: zdpapi_modbus-1.6.0-py3-none-any.whl
examples/demo05/: master.py
examples/demo06/: master.py  slave.py
examples/demo07/: master.py  slave.py
examples/demo08/: master.py  slave.py
examples/demo09/: master.py
examples/z01_sync/: master.py  slave.py
examples/z02_async/: master.py
examples/z03_redis_async/: bmaster.bat  bredis_acquisition.bat  bredis_socketio.bat  bslave.bat  slave.py
examples/z04_scada/: main.py  start.bat  start.sh
examples/z04_scada/whls/: redis-4.0.2-py3-none-any.whl
examples/z05_simulation/: config.py  docker.sh  main.py  start.bat  start.sh
examples/z05_simulation/whls/: zdpapi_modbus-1.7.0-py3-none-any.whl
zdpapi_modbus/: __init__.py  device_async.py  funcs.py  master.py  master_async.py  random.py  slave.py  zstruct.py
zdpapi_modbus/funcs/: writer.py
zdpapi_modbus/libs/modbus_tk/: __init__.py  defines.py  exceptions.py  hooks.py  modbus.py  modbus_rtu.py  modbus_rtu_over_tcp.py  modbus_tcp.py  simulator.py  simulator_rpc_client.py  utils.py
zdpapi_modbus/zstruct/: zstruct.py
